--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,1 +1,70 @@
-<p>employee works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+</head>
+
+<body>
+
+
+
+    <div class="testSort" style="text-align: center;">
+        <div>
+            <h1>Zahlungen geordnet:</h1>
+            <ul>
+                <li *ngFor="let usersSort of userAccountsSorted">
+                    <p>Kontostand: {{usersSort?.balance}} | Name: {{usersSort?.firstName}}, {{usersSort?.lastName}} </p>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+
+    <div *ngFor="let users of userAccounts">
+
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Nr.</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Nachname</th>
+                    <th scope="col">Beschreibung</th>
+                    <th scope="col">Datum</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Betrag</th>
+                    <th scope="col">Aktion</th>
+                </tr>
+            </thead>
+            <tbody *ngFor="let usersSort of userAccountsSorted">
+                <tr *ngFor="let deposit of users.deposit; let i = index">
+                    <th scope="col">{{i}}</th>
+                    <th scope="col">{{usersSort?.firstName}}</th>
+                    <th scope="col">{{usersSort?.lastName}}</th>
+                    <th scope="col">{{deposit?.description}}</th>
+                    <th scope="col">{{deposit?.date}}</th>
+                    <th *ngIf="deposit?.authorized" style="color: green;" scope="col">erfolgreich</th>
+                    <th *ngIf="!deposit?.authorized" style="color: red;" scope="col">ausstehend</th>
+                    <th scope="col">{{deposit?.depositValue}} €</th>
+                    <th scope="col">
+                        <button type="button" class="btn btn-primary">USER</button>
+                    </th>
+                </tr>
+            </tbody>
+        </table>
+        <p style="text-align: center;">
+            ______________________________________
+        </p>
+    </div>
+
+
+
+
+</body>
