--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,12 @@
 .header {
     background-color: #333;
-    color: #fff;
+    color: #ffffff2d;
+
+    left: 0;
+    width: 100%;
+    position: relative;
+
+
 }
 
 .nav-item :hover {
