--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,9 +1,12 @@
 .footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
+    left: 0;
     width: 100%;
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 10px 0;
+    padding: 10px;
+
+
 }
