--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+</head>
+
+
 <!--<h1 style="text-align: center;">LOGIN!</h1>-->
 <!--
 <div style="text-align: center;">
@@ -17,20 +32,31 @@
 </div>
 -->
 
+<body>
 
-<form>
-    <div class="center-horizontal">
-        <div class="center-vertical">
+    <main role="main" class="container">
+        <div class="jumbotron text-center">
+            <h1>e-Commerce: Login</h1>
+            <p class="lead text-info">Easy Transfer!</p>
+        </div>
+        <br>
+        <br>
+        <br>
+    </main>
+
+    <form>
+        <div class="centered">
             <div>
-                <input type="text" class="centered-input" placeholder="Nutzername(Email Addresse)">
+                <input #userName type="text" class="centered-input" placeholder="Nutzername(Email Addresse)">
             </div>
             <div>
-                <input type="password" class="centered-input" placeholder="Passwort">
+                <input #userPassword type="password" class="centered-input" placeholder="Passwort">
             </div>
 
-            <div style="text-align: center;">
+            <div class="centered-input" style="text-align: center;">
                 <!-- Submit button -->
-                <button type="button" class="btn btn-primary btn-block mb-4">Anmelden</button>
+                <button (click)="userLogin(userName.value, userPassword.value)" type="button"
+                    class="btn btn-primary btn-block mb-4">Anmelden</button>
 
                 <div class="row mb-4">
                     <div class="col">
@@ -39,8 +65,17 @@
                     </div>
                 </div>
             </div>
-
         </div>
-    </div>
 
-</form>
+    </form>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+
+
+</body>
